--- a/control/beaconing/connect/BUILD.bazel
+++ b/control/beaconing/connect/BUILD.bazel
@@ -15,10 +15,10 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
         "//pkg/proto/control_plane:go_default_library",
-        "//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/snet/squic:go_default_library",
         "@com_connectrpc_connect//:go_default_library",
         "@com_github_quic_go_quic_go//http3:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
     ],
 )
