--- a/gateway/BUILD.bazel
+++ b/gateway/BUILD.bazel
@@ -33,7 +33,6 @@ go_library(
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/proto/gateway:go_default_library",
-        "//pkg/proto/gateway/v1/gatewayconnect:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/metrics:go_default_library",
         "//pkg/snet/squic:go_default_library",
@@ -46,6 +45,7 @@ go_library(
         "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
         "@com_github_quic_go_quic_go//:go_default_library",
         "@com_github_quic_go_quic_go//http3:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/gateway/v1/gatewayconnect:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
