--- a/private/ca/renewal/connect/BUILD.bazel
+++ b/private/ca/renewal/connect/BUILD.bazel
@@ -7,8 +7,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/control_plane:go_default_library",
-        "//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
         "//private/ca/renewal/grpc:go_default_library",
         "@com_connectrpc_connect//:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
     ],
 )
