--- a/private/trust/grpc/BUILD.bazel
+++ b/private/trust/grpc/BUILD.bazel
@@ -35,6 +35,7 @@ go_test(
     ],
     data = glob(["testdata/**"]),
     deps = [
+        ":go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/xtest:go_default_library",
