beaconing: add discovery extension
This PR adds a beacon extension to include control and discovery service
addresses along with beacons. This will help to reduce the number of SVC
resolution requests we need. With this information we can simply use the
provided addresses instead of doing SVC resolution when communicating
upstream.

Contributes #4388

--- a/control/beaconing/BUILD.bazel
+++ b/control/beaconing/BUILD.bazel
@@ -31,6 +31,7 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/segment/extensions/digest:go_default_library",
+        "//pkg/segment/extensions/discovery:go_default_library",
         "//pkg/segment/extensions/epic:go_default_library",
         "//pkg/segment/extensions/staticinfo:go_default_library",
         "//pkg/segment/iface:go_default_library",
