--- a/scion/showpaths/BUILD.bazel
+++ b/scion/showpaths/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//pkg/daemon:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/segment/iface:go_default_library",
+        "//pkg/slices:go_default_library",
         "//pkg/snet:go_default_library",
         "//private/app/path:go_default_library",
         "//private/app/path/pathprobe:go_default_library",
