--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -18,7 +18,9 @@ go_library(
         "//control/beaconing/happy:go_default_library",
         "//control/config:go_default_library",
         "//control/drkey:go_default_library",
+        "//control/drkey/connect:go_default_library",
         "//control/drkey/grpc:go_default_library",
+        "//control/drkey/happy:go_default_library",
         "//control/ifstate:go_default_library",
         "//control/mgmtapi:go_default_library",
         "//control/onehop:go_default_library",
