--- a/control/beaconing/BUILD.bazel
+++ b/control/beaconing/BUILD.bazel
@@ -74,6 +74,7 @@ go_test(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/scrypto/signed:go_default_library",
         "//pkg/segment:go_default_library",
+        "//pkg/segment/extensions/discovery:go_default_library",
         "//pkg/segment/extensions/staticinfo:go_default_library",
         "//pkg/segment/iface:go_default_library",
         "//pkg/slayers/path:go_default_library",
