--- a/control/drkey/grpc/BUILD.bazel
+++ b/control/drkey/grpc/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//pkg/proto/control_plane:go_default_library",
         "//pkg/proto/drkey:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/addrutil:go_default_library",
         "@org_go4_netipx//:go_default_library",
         "@org_golang_google_grpc//credentials:go_default_library",
         "@org_golang_google_grpc//peer:go_default_library",
