--- a/pkg/snet/addrutil/BUILD.bazel
+++ b/pkg/snet/addrutil/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@rules_go//go:def.bzl", "go_library")
+load("//tools:go.bzl", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -14,5 +15,19 @@ go_library(
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
+    ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["addrutil_test.go"],
+    deps = [
+        ":go_default_library",
+        "//pkg/addr:go_default_library",
+        "//pkg/snet:go_default_library",
+        "//pkg/snet/mock_snet:go_default_library",
+        "//pkg/snet/path:go_default_library",
+        "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
