--- a/private/trust/BUILD.bazel
+++ b/private/trust/BUILD.bazel
@@ -35,6 +35,7 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/scrypto/signed:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/addrutil:go_default_library",
         "//private/tracing:go_default_library",
         "//private/trust/internal/metrics:go_default_library",
         "@com_github_opentracing_opentracing_go//:go_default_library",
