docs: Add vagrant to the tutorial

--- a/doc/tutorials/deploy/Makefile
+++ b/doc/tutorials/deploy/Makefile
@@ -33,3 +33,9 @@ down:
 purge: down
 	docker ps -aq --filter "name=scion" | xargs -r docker rm -f
 	docker network ls -q --filter "name=sciontutorial" | xargs -r docker network rm
+
+vm-up:
+	vagrant up
+
+vm-purge:
+	vagrant destroy
