--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "messaging.go",
         "observability.go",
         "policy.go",
+        "registration.go",
         "revhandler.go",
         "tasks.go",
         "trust.go",
