--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -5,11 +5,9 @@ go_library(
     name = "go_default_library",
     srcs = [
         "hiddenpaths.go",
-        "ignore.go",
         "messaging.go",
         "observability.go",
         "policy.go",
-        "registration.go",
         "revhandler.go",
         "tasks.go",
         "trust.go",
@@ -23,6 +21,7 @@ go_library(
         "//control/config:go_default_library",
         "//control/drkey:go_default_library",
         "//control/ifstate:go_default_library",
+        "//control/registration:go_default_library",
         "//control/segreq:go_default_library",
         "//control/trust:go_default_library",
         "//pkg/addr:go_default_library",
@@ -40,7 +39,6 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/snet:go_default_library",
-        "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/metrics:go_default_library",
         "//private/ca/renewal:go_default_library",
         "//private/config:go_default_library",
