--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -28,6 +28,7 @@ go_library(
         "//control/trust/grpc:go_default_library",
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/experimental/hiddenpath:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
@@ -39,6 +40,7 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/addrutil:go_default_library",
         "//private/app:go_default_library",
         "//private/app/appnet:go_default_library",
         "//private/app/command:go_default_library",
