--- a/gateway/control/BUILD.bazel
+++ b/gateway/control/BUILD.bazel
@@ -40,6 +40,8 @@ go_library(
         "@com_github_gopacket_gopacket//:go_default_library",
         "@com_github_gopacket_gopacket//layers:go_default_library",
         "@com_github_olekukonko_tablewriter//:go_default_library",
+        "@com_github_olekukonko_tablewriter//renderer:go_default_library",
+        "@com_github_olekukonko_tablewriter//tw:go_default_library",
         "@org_go4_netipx//:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
