--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -61,14 +61,24 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["trust_test.go"],
+    srcs = [
+        "registration_test.go",
+        "trust_test.go",
+    ],
     data = glob(["testdata/**"]),
     deps = [
         ":go_default_library",
+        "//control/beacon:go_default_library",
+        "//control/beacon/mock_beacon:go_default_library",
+        "//control/registration:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/private/xtest/graph:go_default_library",
+        "//pkg/segment:go_default_library",
         "//private/app/command:go_default_library",
+        "//private/path/pathpol:go_default_library",
         "//private/storage/trust/sqlite:go_default_library",
         "//scion-pki/testcrypto:go_default_library",
+        "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
