--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -73,6 +73,7 @@ go_test(
         "//control/beaconing:go_default_library",
         "//control/registration:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/log:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
         "//private/app/command:go_default_library",
