deprecate registration package and move its contents to segreg package that already exists

--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -21,7 +21,7 @@ go_library(
         "//control/config:go_default_library",
         "//control/drkey:go_default_library",
         "//control/ifstate:go_default_library",
-        "//control/registration:go_default_library",
+        "//control/segreg:go_default_library",
         "//control/segreq:go_default_library",
         "//control/trust:go_default_library",
         "//pkg/addr:go_default_library",
@@ -71,7 +71,7 @@ go_test(
         "//control/beacon:go_default_library",
         "//control/beacon/mock_beacon:go_default_library",
         "//control/beaconing:go_default_library",
-        "//control/registration:go_default_library",
+        "//control/segreg:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
