--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -89,6 +89,7 @@ use_repo(
     "com_github_stretchr_testify",
     "com_github_uber_jaeger_client_go",
     "com_github_vishvananda_netlink",
+    "com_github_go_viper_mapstructure_v2",
     "in_gopkg_yaml_v3",
     "org_go4_netipx",
     "org_golang_google_grpc",
