connectrpc: add support for server and client side (#4788)
Add connectrpc server support for all endpoints with exception of the
hidden path inter AS RPCs.

On the client side, we use happy eyeballs with currently a fixed delay
of 500ms to connect over the legacy gRPC SCION. This might be tuned in a
follow up commit.

The intra AS RPCs are also support connectrpc, but the client side is
not adapted. Here, we anyway have gRPC/TCP at the moment and moving to
connectrpc is less urgent.

Contributes to https://github.com/scionproto/scion/issues/4434

---------

Co-authored-by: Katya Titkova <katyatitkova@gmail.com>
Co-authored-by: Jean-Christophe Hugly <jice@scion.org>

--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -13,20 +13,28 @@ go_library(
         "//control:go_default_library",
         "//control/beacon:go_default_library",
         "//control/beaconing:go_default_library",
+        "//control/beaconing/connect:go_default_library",
         "//control/beaconing/grpc:go_default_library",
+        "//control/beaconing/happy:go_default_library",
         "//control/config:go_default_library",
         "//control/drkey:go_default_library",
+        "//control/drkey/connect:go_default_library",
         "//control/drkey/grpc:go_default_library",
+        "//control/drkey/happy:go_default_library",
         "//control/ifstate:go_default_library",
         "//control/mgmtapi:go_default_library",
         "//control/onehop:go_default_library",
+        "//control/segreg/connect:go_default_library",
         "//control/segreg/grpc:go_default_library",
         "//control/segreq:go_default_library",
+        "//control/segreq/connect:go_default_library",
         "//control/segreq/grpc:go_default_library",
         "//control/trust:go_default_library",
+        "//control/trust/connect:go_default_library",
         "//control/trust/grpc:go_default_library",
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/connect:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
@@ -38,6 +46,7 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/segment/iface:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/squic:go_default_library",
         "//private/app:go_default_library",
         "//private/app/appnet:go_default_library",
         "//private/app/command:go_default_library",
@@ -45,15 +54,19 @@ go_library(
         "//private/ca/api:go_default_library",
         "//private/ca/config:go_default_library",
         "//private/ca/renewal:go_default_library",
+        "//private/ca/renewal/connect:go_default_library",
         "//private/ca/renewal/grpc:go_default_library",
         "//private/discovery:go_default_library",
+        "//private/discovery/connect:go_default_library",
         "//private/drkey/drkeyutil:go_default_library",
         "//private/keyconf:go_default_library",
         "//private/mgmtapi/cppki/api:go_default_library",
         "//private/mgmtapi/jwtauth:go_default_library",
         "//private/mgmtapi/segments/api:go_default_library",
         "//private/periodic:go_default_library",
+        "//private/segment/segfetcher/connect:go_default_library",
         "//private/segment/segfetcher/grpc:go_default_library",
+        "//private/segment/segfetcher/happy:go_default_library",
         "//private/segment/seghandler:go_default_library",
         "//private/service:go_default_library",
         "//private/storage:go_default_library",
@@ -66,16 +79,22 @@ go_library(
         "//private/topology:go_default_library",
         "//private/trust:go_default_library",
         "//private/trust/compat:go_default_library",
+        "//private/trust/connect:go_default_library",
         "//private/trust/grpc:go_default_library",
+        "//private/trust/happy:go_default_library",
         "//private/trust/metrics:go_default_library",
         "@com_github_go_chi_chi_v5//:go_default_library",
         "@com_github_go_chi_cors//:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
+        "@com_github_quic_go_quic_go//:go_default_library",
+        "@com_github_quic_go_quic_go//http3:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/discovery/v1/discoveryconnect:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@in_gopkg_yaml_v3//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//health:go_default_library",
-        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
+        "@org_golang_x_net//http2:go_default_library",
+        "@org_golang_x_net//http2/h2c:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
