--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -115,7 +115,7 @@ genrule(
     outs = [
         "portfilter_test_cap",
     ],
-    cmd_bash = "cp -f $< $@ ; /usr/bin/sudo setcap \"cap_bpf=ep cap_net_admin=ep cap_sys_admin=ep cap_net_raw=ep\" $@ || echo Failed",
+    cmd_bash = "cp -f $< $@ ; /usr/bin/sudo setcap \"cap_bpf=ep cap_net_admin=ep cap_net_raw=ep\" $@ || echo Failed",
 )
 
 # This is the rule that actually runs the portfilter test.
