--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -66,24 +66,13 @@ go_test(
     ],
 )
 
-# Adds required capabilities to the portfilter test. Otherwise it cannot be executed.
-genrule(
-    name = "gen_portfilter_test_cap",
-    testonly = True,
-    srcs = [
-        "go_default_test",
-    ],
-    outs = [
-        "portfilter_test_cap",
-    ],
-    cmd_bash = "cp $< $@ ; /usr/bin/sudo setcap \"cap_bpf=ep cap_net_admin=ep cap_sys_admin=ep cap_net_raw=ep\" $@",
-)
-
 # This is the rule that actually runs the portfilter test.
 sh_test(
     name = "portfilter_test",
     testonly = True,
-    srcs = ["portfilter_test_cap"],
+    srcs = ["port_filter_test_cap.sh"],
+    args = ["$(location go_default_test)"],
+    data = [":go_default_test"],
     tags = [
         "supports-graceful-termination",
         "unit",
