--- a/scion-pki/trcs/BUILD.bazel
+++ b/scion-pki/trcs/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//pkg/scrypto/cms/oid:go_default_library",
         "//pkg/scrypto/cms/protocol:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
+        "//private/app:go_default_library",
         "//private/app/command:go_default_library",
         "//scion-pki:go_default_library",
         "//scion-pki/conf:go_default_library",
