--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -38,6 +38,7 @@ go_library(
         "//pkg/scrypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/segment:go_default_library",
+        "//pkg/segment/extensions/discovery:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/metrics:go_default_library",
