--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -115,6 +115,7 @@ steps:
       key: check_generated
       retry: *automatic-retry
   - group: "End to End"
+    key: e2e
     steps:
     - label: "E2E: default :man_in_business_suit_levitating: (scion, ping)"
       command:
