--- a/control/beaconing/happy/BUILD.bazel
+++ b/control/beaconing/happy/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//control/beaconing:go_default_library",
+        "//control/config:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/connect/happy:go_default_library",
         "//pkg/private/serrors:go_default_library",
