--- a/control/config/BUILD.bazel
+++ b/control/config/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     importpath = "github.com/scionproto/scion/control/config",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/connect/happy:go_default_library",
         "//pkg/drkey:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
