Implement reviewer's suggestions.
Namely:
* Pass the happy config through to where it is used, rather than store it
  as a global variable.
* Make the sig configurable too.

--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -35,6 +35,7 @@ go_library(
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
+        "//pkg/connect/happy:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
