--- a/gateway/BUILD.bazel
+++ b/gateway/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//gateway/xnet:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
+        "//pkg/connect/happy:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
