cmd/scion-pki: add certificate template command
Add a `scion-pki certificate template` command that extracts the subject template
from an existing certificate or CSR. This command can be used to reconstruct
the subject template used to create a certificate or CSR.

--- a/scion-pki/certs/BUILD.bazel
+++ b/scion-pki/certs/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "observability.go",
         "renew.go",
         "sign.go",
+        "template.go",
         "validate.go",
         "verify.go",
     ],
