--- a/control/beacon/BUILD.bazel
+++ b/control/beacon/BUILD.bazel
@@ -23,6 +23,9 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/scrypto/signed:go_default_library",
         "//pkg/segment:go_default_library",
+        "//pkg/segment/iface:go_default_library",
+        "//pkg/snet:go_default_library",
+        "//private/path/pathpol:go_default_library",
         "//private/segment/segverifier:go_default_library",
         "//private/segment/verifier:go_default_library",
         "//private/trust:go_default_library",
