--- a/control/beaconing/BUILD.bazel
+++ b/control/beaconing/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
     deps = [
         "//control/beacon:go_default_library",
         "//control/ifstate:go_default_library",
+        "//control/segreg:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
@@ -65,6 +66,7 @@ go_test(
         "//control/beacon:go_default_library",
         "//control/beaconing/mock_beaconing:go_default_library",
         "//control/ifstate:go_default_library",
+        "//control/segreg:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
