--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "connector.go",
         "dataplane.go",
         "doc.go",
+        "fnv1acheap.go",
         "metrics.go",
         "serialize_proxy.go",
         "svc.go",
