--- a/router/underlayproviders/udpip/BUILD.bazel
+++ b/router/underlayproviders/udpip/BUILD.bazel
@@ -29,6 +29,7 @@ go_test(
         "//pkg/slayers:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
+        "//router:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
