--- a/private/mgmtapi/tools/package.json
+++ b/private/mgmtapi/tools/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "@redocly/cli": "1.34.3",
+        "@redocly/cli": "1.34.5",
         "@stoplight/spectral-cli": "^6.15.0"
     },
     "pnpm": {
@@ -24,9 +24,9 @@
             },
             "redoc@~2.5.0": {
                 "dependencies": {
-                    "call-me-maybe": "1.0.2",
+                    "call-me-maybe": ">=1.0.2",
                     "yaml": ">=2.2.2",
-                    "fast-safe-stringify": "2.1.1"
+                    "fast-safe-stringify": ">=2.1.1"
                 }
             }
         }
