Address reviewers concern. Configure gateway's server-side rpc.
There also was a bug on the client-side config: it was using the server-side
setting.

--- a/gateway/BUILD.bazel
+++ b/gateway/BUILD.bazel
@@ -38,6 +38,7 @@ go_library(
         "//pkg/snet/metrics:go_default_library",
         "//pkg/snet/squic:go_default_library",
         "//private/app/appnet:go_default_library",
+        "//private/env:go_default_library",
         "//private/periodic:go_default_library",
         "//private/service:go_default_library",
         "//private/svc:go_default_library",
