--- a/demo/stun/test-server/BUILD.bazel
+++ b/demo/stun/test-server/BUILD.bazel
@@ -1,5 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("//tools/lint:go.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "go_default_library",
