private/storage: improve sqlite usage
This pull request makes several improvements to the usage of sqlite in our storage layer.

1. We now only depend on modernc.org/sqlite, removing the dependency on
  mattn/go-sqlite3. This simplifies our dependency management and removes
  another cgo dependency

2. We open a read and write connection pool. The read pool is limited to
  one open connection. In combination with the WAL journal mode this
  allows for concurrent reads and writes. Furthermore, we can get rid of
  the mutex, as the Go sql package deals with concurrency internally.

3. We set transactions to IMMEDIATE mode. This prevents the default
  DEFERRED mode, which only acquires a write lock when the first write
  statement is executed. In IMMEDIATE mode, the write lock is acquired
  when the transaction begins. This prevents unexpected SQLITE_BUSY
  errors during a transaction.

4. We periodically run a WAL checkpoint in the background. This prevents
  the WAL file from growing indefinitely.

At Anapaya we have used this pattern with great success and it has shown
to increase performance and stability of our sqlite usage.

Inspiration:

https://kerkour.com/sqlite-for-servers
https://riverqueue.com/docs/sqlite#concurrency-best-practices
https://theitsolutions.io/blog/modernc.org-sqlite-with-go

I have also run a very unscientific stress test on our internal implementation.
Note that every write does significant amount of work like creating path segments (including signatures).
Nevertheless, the speed-up is considerable, even with cpu cycles being wasted on signing.

--------------

	concurrentReaders = 1000
	concurrentWriters = 500

Before Refactor:

    dbtest.go:451: 8,846 reads/s
    dbtest.go:452: 8.6 writes/s

After refactor:

    dbtest.go:474: 25,949.4 reads/s
    dbtest.go:475: 594.5 writes/s

--------------

	concurrentReaders = 50
	concurrentWriters = 10

Before Refactor

    dbtest.go:451: 6,661 reads/s
    dbtest.go:452: 134.1 writes/s

After Refacto

--- a/control/drkey/BUILD.bazel
+++ b/control/drkey/BUILD.bazel
@@ -40,6 +40,7 @@ go_test(
         "//pkg/private/util:go_default_library",
         "//pkg/private/xtest:go_default_library",
         "//private/periodic:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/drkey/level1/sqlite:go_default_library",
         "//private/storage/drkey/secret/sqlite:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
