--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -77,10 +77,12 @@ go_test(
         "//control/segreg:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
+        "//pkg/private/xtest:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
         "//private/app/command:go_default_library",
         "//private/path/pathpol:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/trust/sqlite:go_default_library",
         "//scion-pki/testcrypto:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
