--- a/private/storage/beacon/metrics/BUILD.bazel
+++ b/private/storage/beacon/metrics/BUILD.bazel
@@ -26,10 +26,12 @@ go_test(
         ":go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/metrics:go_default_library",
+        "//pkg/private/xtest:go_default_library",
         "//private/storage:go_default_library",
         "//private/storage/beacon:go_default_library",
         "//private/storage/beacon/dbtest:go_default_library",
         "//private/storage/beacon/sqlite:go_default_library",
+        "//private/storage/db:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
