--- a/private/storage/beacon/sqlite/BUILD.bazel
+++ b/private/storage/beacon/sqlite/BUILD.bazel
@@ -22,16 +22,15 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "db_test.go",
-        "export_test.go",
-    ],
-    embed = [":go_default_library"],
+    srcs = ["db_test.go"],
     deps = [
+        ":go_default_library",
         "//control/beacon:go_default_library",
         "//control/beacon/beacondbtest:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/private/xtest:go_default_library",
         "//private/storage/beacon/dbtest:go_default_library",
+        "//private/storage/db:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
     ],
