--- a/private/storage/path/metrics/BUILD.bazel
+++ b/private/storage/path/metrics/BUILD.bazel
@@ -25,7 +25,9 @@ go_test(
     srcs = ["metrics_test.go"],
     deps = [
         ":go_default_library",
+        "//pkg/private/xtest:go_default_library",
         "//private/storage:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/path/dbtest:go_default_library",
         "//private/storage/path/sqlite:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
