--- a/private/storage/path/sqlite/BUILD.bazel
+++ b/private/storage/path/sqlite/BUILD.bazel
@@ -26,6 +26,8 @@ go_test(
     srcs = ["sqlite_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/private/xtest:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/path/dbtest:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
