--- a/private/storage/trust/fspersister/BUILD.bazel
+++ b/private/storage/trust/fspersister/BUILD.bazel
@@ -25,6 +25,7 @@ go_test(
         "//pkg/private/xtest:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//private/storage:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/trust/dbtest:go_default_library",
         "//private/storage/trust/sqlite:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
