--- a/private/storage/trust/sqlite/BUILD.bazel
+++ b/private/storage/trust/sqlite/BUILD.bazel
@@ -23,6 +23,8 @@ go_test(
     srcs = ["db_test.go"],
     deps = [
         ":go_default_library",
+        "//pkg/private/xtest:go_default_library",
+        "//private/storage/db:go_default_library",
         "//private/storage/trust/dbtest:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
     ],
