--- a/.github/workflows/gobra.yml
+++ b/.github/workflows/gobra.yml
@@ -8,7 +8,8 @@ jobs:
   setup-and-test:
     runs-on: ubuntu-latest
     env:
-      statsFile: '/gobra/stats.json'
+      imageVersion: 'v25.09'
+      module: 'github.com/scionproto/scion/'
     steps:
       - name: Checkout the SCION repository
         uses: actions/checkout@v2
@@ -19,16 +20,27 @@ jobs:
         with:
           path: ${{ runner.workspace }}/.gobra/cache.json
           key: ${{ env.cache-name }}
+      - name: Check that package gobra/utils is well-formed
+        uses: viperproject/gobra-action@v25.09
+        with:
+          packages: 'gobra/utils'
+          # Gobra only verifies files annotated with the header "// +gobra"
+          headerOnly: '1'
+          timeout: 2m
+          imageVersion: ${{ env.imageVersion }}
+          module: ${{ env.module }}
       - name: Check that specifications of third-party libraries are well-formed
         uses: viperproject/gobra-action@v25.09
         with:
-          projectRoot: "gobra/stdlib-specs"
+          projectRoot: 'gobra/stdlib-specs'
           # Gobra only verifies files annotated with the header "// +gobra"
           headerOnly: '1'
           # Traverse the entire repository, including nested packages,
           # in search for annotated files to verify
           recursive: '1'
           timeout: 10m
+          imageVersion: ${{ env.imageVersion }}
+          module: ${{ env.module }}
       - name: Verify the specified files
         uses: viperproject/gobra-action@v22.10.2
         with:
